# ai-defense-python-sdk

./: README.md  pyproject.toml
aidefense/: config.py
examples/agentsec/1-simple/: .gitignore  __init__.py  basic_protection.py  cohere_example.py  cohere_gateway_example.py  gateway_mode_example.py  mcp_example.py  mcp_oauth2_mock_example.py  mistral_example.py  mistral_gateway_example.py  openai_example.py  pyproject.toml  run-all-integration-tests.sh  simple_strands_bedrock.py  skip_inspection_example.py  streaming_example.py
examples/agentsec/1-simple/tests/: __init__.py
examples/agentsec/1-simple/tests/integration/: __init__.py  test-simple-examples.sh
examples/agentsec/1-simple/tests/unit/: __init__.py  test_simple_examples.py
examples/agentsec/2-agent-frameworks/autogen-agent/: README.md  agent.py  pyproject.toml
examples/agentsec/2-agent-frameworks/autogen-agent/config/: config-azure.yaml  config-bedrock.yaml  config.yaml
examples/agentsec/2-agent-frameworks/autogen-agent/scripts/: run.sh
examples/agentsec/2-agent-frameworks/autogen-agent/tests/integration/: .gitignore  test-all-providers.sh
examples/agentsec/2-agent-frameworks/autogen-agent/tests/unit/: __init__.py  test_autogen_example.py
examples/agentsec/2-agent-frameworks/crewai-agent/: .gitignore  README.md  agent.py  pyproject.toml
examples/agentsec/2-agent-frameworks/crewai-agent/config/: config-vertex.yaml  config.yaml
examples/agentsec/2-agent-frameworks/crewai-agent/scripts/: run.sh
examples/agentsec/2-agent-frameworks/crewai-agent/tests/integration/: test-all-providers.sh
examples/agentsec/2-agent-frameworks/crewai-agent/tests/unit/: __init__.py  test_crewai_example.py
examples/agentsec/2-agent-frameworks/langchain-agent/: README.md  agent.py  pyproject.toml
examples/agentsec/2-agent-frameworks/langchain-agent/config/: config-vertex.yaml  config.yaml
examples/agentsec/2-agent-frameworks/langchain-agent/scripts/: run.sh
examples/agentsec/2-agent-frameworks/langchain-agent/tests/: __init__.py
examples/agentsec/2-agent-frameworks/langchain-agent/tests/integration/: __init__.py  test-all-providers.sh
examples/agentsec/2-agent-frameworks/langchain-agent/tests/unit/: __init__.py  test_langchain_example.py
examples/agentsec/2-agent-frameworks/langgraph-agent/: .gitignore  README.md  agent.py  pyproject.toml
examples/agentsec/2-agent-frameworks/langgraph-agent/config/: config-bedrock.yaml  config-openai.yaml  config.yaml
examples/agentsec/2-agent-frameworks/langgraph-agent/scripts/: run.sh
examples/agentsec/2-agent-frameworks/langgraph-agent/tests/integration/: .gitignore  test-all-providers.sh
examples/agentsec/2-agent-frameworks/langgraph-agent/tests/unit/: __init__.py  test_langgraph_example.py
examples/agentsec/2-agent-frameworks/openai-agent/: README.md  agent.py  pyproject.toml
examples/agentsec/2-agent-frameworks/openai-agent/config/: config.yaml
examples/agentsec/2-agent-frameworks/openai-agent/scripts/: run.sh
examples/agentsec/2-agent-frameworks/openai-agent/tests/integration/: test-all-providers.sh
examples/agentsec/2-agent-frameworks/openai-agent/tests/unit/: __init__.py  test_openai_example.py
examples/agentsec/2-agent-frameworks/strands-agent/: .gitignore  README.md  agent.py  pyproject.toml
examples/agentsec/2-agent-frameworks/strands-agent/config/: config-bedrock.yaml  config.yaml
examples/agentsec/2-agent-frameworks/strands-agent/scripts/: run.sh
examples/agentsec/2-agent-frameworks/strands-agent/tests/integration/: test-all-providers.sh
examples/agentsec/2-agent-frameworks/strands-agent/tests/unit/: __init__.py  test_strands_example.py
examples/agentsec/3-agent-runtimes/amazon-bedrock-agentcore/: .bedrock_agentcore.yaml  Dockerfile  README.md  pyproject.toml
examples/agentsec/3-agent-runtimes/amazon-bedrock-agentcore/.bedrock_agentcore/agentcore_sre_direct/: dependencies.hash
examples/agentsec/3-agent-runtimes/amazon-bedrock-agentcore/_shared/: __init__.py  agent_factory.py  mcp_tools.py  tools.py
examples/agentsec/3-agent-runtimes/amazon-bedrock-agentcore/aidefense/: __init__.py  config.py  exceptions.py  request_handler.py  version.py
examples/agentsec/3-agent-runtimes/amazon-bedrock-agentcore/aidefense/management/: __init__.py  applications.py  auth.py  base_client.py  connections.py  events.py  management_client.py  policies.py  routes.py  validation_client.py
examples/agentsec/3-agent-runtimes/amazon-bedrock-agentcore/aidefense/mcpscan/: README.md  __init__.py  mcp_scan.py  mcp_scan_base.py  models.py  policies.py  routes.py
examples/agentsec/3-agent-runtimes/amazon-bedrock-agentcore/aidefense/models/: base.py
examples/agentsec/3-agent-runtimes/amazon-bedrock-agentcore/aidefense/modelscan/: README.md  __init__.py  model_scan.py  model_scan_base.py  models.py  routes.py
examples/agentsec/3-agent-runtimes/amazon-bedrock-agentcore/aidefense/runtime/: __init__.py  auth.py  chat_inspect.py  chat_models.py  constants.py  http_inspect.py  http_models.py  inspection_client.py  mcp_inspect.py  mcp_models.py  models.py  utils.py
examples/agentsec/3-agent-runtimes/amazon-bedrock-agentcore/container-deploy/: Dockerfile  agentcore_app.py  dockerignore  requirements.txt
examples/agentsec/3-agent-runtimes/amazon-bedrock-agentcore/direct-deploy/: agentcore_app.py  requirements.txt  test_with_protection.py
examples/agentsec/3-agent-runtimes/amazon-bedrock-agentcore/lambda-deploy/: lambda_handler.py  requirements.txt
examples/agentsec/3-agent-runtimes/microsoft-foundry/: README.md  pyproject.toml
examples/agentsec/3-agent-runtimes/microsoft-foundry/_shared/: __init__.py  agent_factory.py  mcp_tools.py  tools.py
examples/agentsec/3-agent-runtimes/microsoft-foundry/azure-functions/: function_app.py  host.json  requirements.txt
examples/agentsec/3-agent-runtimes/microsoft-foundry/foundry-agent-app/: app.py  requirements.txt
examples/agentsec/3-agent-runtimes/microsoft-foundry/foundry-container/: Dockerfile  app.py  requirements.txt
examples/agentsec/3-agent-runtimes/microsoft-foundry/tests/: __init__.py
(+218 files in other folders)
