[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "autogen-agent-example"
version = "0.1.0"
description = "AutoGen agent example with agentsec protection"
authors = ["Cisco <ai-defense@cisco.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
cisco-aidefense-sdk = { path = "../../../..", develop = true }

# AG2 framework with native provider integrations
ag2 = { version = ">=0.6.0", extras = ["openai", "bedrock", "vertexai"] }

# AutoGen AgentChat components
autogen-agentchat = ">=0.4.0"
autogen-ext = { version = ">=0.4.0", extras = ["openai"] }

# AWS SDK for Bedrock
boto3 = ">=1.28.0"

# OpenAI Python client (for OpenAI and Azure)
openai = ">=1.0.0"

# Google Cloud Vertex AI SDK (for Vertex AI with ADC)
google-cloud-aiplatform = ">=1.50.0"

# MCP client library for tool integration
mcp = ">=1.0.0"

# Environment variable loading from .env files
python-dotenv = ">=1.0.0"

# YAML config parsing
pyyaml = ">=6.0.0"

# OpenTelemetry for adapter integration
opentelemetry-sdk = ">=1.20.0"
opentelemetry-api = ">=1.20.0"
