[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "crewai-agent-example"
version = "0.1.0"
description = "CrewAI agent example with agentsec protection"
authors = ["Cisco <ai-defense@cisco.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
cisco-aidefense-sdk = { path = "../../../..", develop = true }

# CrewAI framework with native provider integrations
# litellm extra is required for Vertex AI support
crewai = { version = ">=0.28.0", extras = ["azure-ai-inference", "litellm"] }

# AWS SDK for Bedrock
boto3 = ">=1.28.0"

# OpenAI SDK (for OpenAI provider)
openai = ">=1.0.0"

# Google Cloud Vertex AI SDK (for Vertex AI with ADC)
google-cloud-aiplatform = ">=1.50.0"

# MCP client library for tool integration
mcp = ">=1.0.0"

# Environment variable loading from .env files
python-dotenv = ">=1.0.0"

# YAML config parsing
pyyaml = ">=6.0.0"

# OpenTelemetry for adapter integration
opentelemetry-sdk = ">=1.20.0"
opentelemetry-api = ">=1.20.0"
