[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "openai-agent-example"
version = "0.1.0"
description = "OpenAI agent example with agentsec protection"
authors = ["Cisco <ai-defense@cisco.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
cisco-aidefense-sdk = { path = "../../../..", develop = true }

# OpenAI Python client
openai = ">=1.0.0"

# MCP client library for tool integration
mcp = ">=1.0.0"

# Environment variable loading from .env files
python-dotenv = ">=1.0.0"

# OpenTelemetry for adapter integration
opentelemetry-sdk = ">=1.20.0"
opentelemetry-api = ">=1.20.0"
