[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "agentcore-example"
version = "0.1.0"
description = "AWS AgentCore examples with agentsec protection (Direct, Container, Lambda deploy)"
authors = ["Cisco <ai-defense@cisco.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"

# Cisco AI Defense SDK for AI Defense protection
cisco-aidefense-sdk = { path = "../../../..", develop = true }

# Strands Agents SDK for building AI agents
strands-agents = ">=0.1.0"

# AWS SDK for Bedrock LLM access
boto3 = ">=1.28.0"

# AWS Bedrock AgentCore SDK
bedrock-agentcore = ">=0.1.0"

# Environment variable loading from .env files
python-dotenv = ">=1.0.0"

# MCP client library for tool integration (optional - enables MCP tool protection)
mcp = ">=1.11.0"
